// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render cancel slot correctly 1`] = `
<button
  type="button"
  class="mi-share-sheet__cancel"
>
  Custom Cancel
</button>
`;

exports[`should render cancel text when using cancel-text prop 1`] = `
<button
  type="button"
  class="mi-share-sheet__cancel"
>
  foo
</button>
`;

exports[`should render description when using description prop 1`] = `
<span class="mi-share-sheet__description">
  foo
</span>
`;

exports[`should render title and description slot correctly 1`] = `
<transition-stub
  name="mi-fade"
  appear="true"
  persisted="false"
  css="true"
  role="button"
  tabindex="0"
>
  <div class="mi-overlay">
  </div>
</transition-stub>
<transition-stub
  name="mi-popup-slide-bottom"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popup--round mi-popup--bottom mi-safe-area-bottom mi-share-sheet"
  >
    <div class="mi-share-sheet__header">
      <h2 class="mi-share-sheet__title">
        Custom Title
      </h2>
      <span class="mi-share-sheet__description">
        Custom Description
      </span>
    </div>
    <div class="mi-share-sheet__options">
    </div>
    <button
      type="button"
      class="mi-share-sheet__cancel"
    >
      Cancel
    </button>
  </div>
</transition-stub>
`;
